add new model and view

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Video Games I Love</title>
+    <title>Video Games I Have Known and Loved</title>
     <link th:href = "@{main.css}" rel="stylesheet">
 </head>
 <body>
-    <h2>Video Games I Love</h2>
+    <h2>Video Games I Have Known and Loved</h2>
     <table class = "listtable">
         <thead>
         <tr>
