--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -31,3 +31,16 @@ h2 {
 body {
     background-color: #1abc9c;
 }
+
+a:link, a:visited {
+  background-color: #16a085;
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: #27ae60;
+}
