--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -44,3 +44,9 @@ a:link, a:visited {
 a:hover, a:active {
   background-color: #27ae60;
 }
+
+a {
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
