--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -39,6 +39,9 @@ a:link, a:visited {
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 a:hover, a:active {
