add videogame form and pull list from db

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -53,3 +53,18 @@ a {
     margin-right: auto;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.buttons {
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.buttons1 {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.buttons2 {
+    margin-left: auto;
+    margin-right: auto;
+}
