--- a/src/main/resources/templates/consolelist.html
+++ b/src/main/resources/templates/consolelist.html
@@ -30,6 +30,11 @@
   </tr>
   </tbody>
 </table>
-<a href="list">To Video Game List</a>
+<div class = "buttons1">
+  <a href="list">To Video Game List</a>
+</div>
+<div class = "buttons2">
+  <a href="videogameform">Add a Video Game</a>
+</div>
 </body>
 </html>
