--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -31,6 +31,11 @@
         </tr>
         </tbody>
     </table>
-<a href="consolelist">To Console List</a>
+    <div class = "buttons1">
+        <a href="consolelist">To Console List</a>
+    </div>
+    <div class = "buttons2">
+        <a href="videogameform">Add a Video Game</a>
+    </div>
 </body>
 </html>
