--- a/src/main/resources/templates/videogameform.html
+++ b/src/main/resources/templates/videogameform.html
@@ -1,44 +1,37 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" class="h-100">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Add Video Game</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" th:href="@{main.css}" />
+    <title>Add Video Game</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link th:href = "@{main.css}" rel="stylesheet">
 </head>
-<body class="d-flex flex-column h-100">
-<div th:replace="~{fragments/navigation :: navigation}"></div>
+<body>
 
-<main role="main" class="flex-shrink-0">
-  <div class="container mt-5">
-    <div class="jumbotron">
-      <div align="center">
-        <h1>Add Video Game</h1>
-        <form action="#"  th:action="@{/videogameform}" method="post" th:object="${videoGame}">
-          <div class="mb-3">
-            <label for="videoGameName" class="form-label">Game Name</label>
-            <input type="text" class="form-control" id="videoGameName" th:field="*{name}">
+<div>
 
-            <label for="videoGameStudio" class="form-label">Game Studio</label>
-            <input type="text" class="form-control" id="videoGameStudio" th:field="*{studio}">
+    <h3>Add New Employee</h3>
+    <hr/>
 
-            <label for="videoGameRating" class="form-label">Game Rating</label>
-            <input type="text" class="form-control" id="videoGameRating" th:field="*{rating}">
+    <form method="POST" th:action="@{/videogameform}" th:object="${videoGame}">
 
-            <label for="videoGameReview" class="form-label">Game Name</label>
-            <input type="text" class="form-control" id="videoGameReview" th:field="*{review}">
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
+        <input type="text" th:field="*{id}" placeholder="Enter Id" />
+
+        <input type="text" th:field="*{name}" placeholder="Enter Name" />
+
+        <input type="text" th:field="*{studio}" placeholder="Enter Studio" />
+
+        <input type="text" th:field="*{rating}" placeholder="Enter Rating" />
+
+        <input type="text" th:field="*{review}" placeholder="Enter Review" />
+
+        <button type="submit">Save</button>
+
+    </form>
+    <hr/>
+    <div class = buttons>
+    <a th:href="@{/list}">Back to list</a>
     </div>
-  </div>
-</main>
+</div>
 
-<div th:replace="~{fragments/footer :: footer}"></div>
-<!-- bootstrap -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
