fix up front end a bit

--- a/src/main/resources/templates/videogameform.html
+++ b/src/main/resources/templates/videogameform.html
@@ -9,7 +9,7 @@
 
 <div>
 
-    <h3>Add New Employee</h3>
+    <h2>Add Video Game</h2>
     <hr/>
 
     <form method="POST" th:action="@{/videogameform}" th:object="${videoGame}">
