--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -54,6 +54,18 @@ a {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+button {
+    background-color: #16a085;
+    color: black;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+}
+
+button:hover, button:active {
+    background-color: #27ae60;
+}
+
 .buttons {
     margin-left:auto;
     margin-right:auto;
