add console form and pull list from db

--- a/src/main/resources/templates/consolelist.html
+++ b/src/main/resources/templates/consolelist.html
@@ -34,7 +34,7 @@
   <a href="list">To Video Game List</a>
 </div>
 <div class = "buttons2">
-  <a href="videogameform">Add a Video Game</a>
+  <a href="consoleform">Add a Console</a>
 </div>
 </body>
 </html>
