--- a/src/main/resources/templates/consoleform.html
+++ b/src/main/resources/templates/consoleform.html
@@ -27,7 +27,7 @@
     </form>
     <hr/>
     <div class = buttons>
-        <a th:href="@{/list}">Back to list</a>
+        <a th:href="@{/consolelist}">Back to list</a>
     </div>
 </div>
 
