--- a/src/main/resources/templates/videogameform.html
+++ b/src/main/resources/templates/videogameform.html
@@ -6,7 +6,7 @@
     <link th:href = "@{main.css}" rel="stylesheet">
 </head>
 <body>
-
+<div th:replace="~{fragments/navigation :: navigation}"></div>
 <div>
 
     <h2>Add Video Game</h2>
